# shell-rs

./: AGENTS.md  Cargo.toml  README.md  your_program.sh
.codecrafters/: compile.sh  run.sh
src/: command.rs  completion.rs  history.rs  job.rs  main.rs  pipeline.rs  shell.rs  state.rs  token.rs  variable.rs
